--- a/css/themes/light.css
+++ b/css/themes/light.css
@@ -3,38 +3,86 @@
 	color:#333;
 	border-color:#BBB;
 }
-
-
-
-.panel{
+.panel.dragging,
+.panel.resizing{
+	opacity: .6;
+}
+.panel .panel-body,
+.panel .panel-icon{
 	background-color: #FFF;
 	border-color: #BBB;
 	box-shadow: 0 2px 6px rgba(0, 0, 0, .2);
 }
-
 .panel .header{
 	background-color: #EEE;
 	border-bottom-color:#BBB;
 }
-
 .panel .header .close{
-	background-color: #AAA;
+	background-color: #BBB;
 	color:#FFF;
 }
-.panel .header .close:hover{
-	background-color: #666;
+.panel .header .iconic{
+	color:#AAA;
 }
-
-
-
+.panel .header .close:hover,
+.panel .header .iconic:hover{
+	background-color: #666;
+	color:#FFF;
+}
 .panel .content{
 
 }
-
-
 .panel .resizer{
 	border-color: transparent #CCC #CCC transparent;
 }
 .panel .resizer:hover{
 	border-color: transparent #666 #666 transparent;
+}
+
+/* Menu */
+
+.menu.main-menu{
+	background-color:#CCC;
+	box-shadow:0 -2px 2px rgba(0, 0, 0, 0.06) inset;
+}
+
+.menu li:hover{
+	background-color: #333;
+	color:#FFF;
+}
+.menu li li{
+	color:#333;
+}
+.menu li li:hover{
+	background-color: #BBB;
+	color:#000;
+}
+
+.menu ul li ul{
+	background-color: #FFF;
+	box-shadow: 0 2px 6px rgba(0, 0, 0, .2);
+}
+
+/* Modal */
+
+.modal{
+	background-color: #FFF;
+	border-color: #BBB;
+	box-shadow: 0 3px 12px rgba(0, 0, 0, 0.4);
+}
+.modal .header{
+	background-color: #EEE;
+	border-bottom-color:#BBB;
+}
+
+.modal .header .close{
+	color: #AAA;
+}
+.modal .header .close:hover{
+	color: #333;
+}
+
+
+.dimmer{
+	background-color: rgba(200,200,200,.6);
 }
