--- a/css/style.css
+++ b/css/style.css
@@ -344,3 +344,74 @@ label{
 canvas{
 	display: block;
 }
+
+/* Expando */
+
+.expando{
+	margin-bottom: 10px
+}
+
+.expando .expando-header{
+	height:20px;
+	line-height: 20px;
+	padding: 0 10px 0 25px;
+	overflow: hidden;
+	cursor:pointer;
+	position: relative;
+}
+.expando .expando-header:before{
+	position: absolute;
+	top: 4px;
+	left:7px;
+	content: '';
+	display: block;
+	width: 0;
+	height: 0;
+	border-width: 5px 7px;
+	border-style:solid; 
+}
+
+.expando.open .expando-header:before{
+	top: 6px;
+	left:7px;
+	border-width: 7px 5px;
+}
+
+
+
+
+/* Range */
+
+input[type='range'] {
+	-webkit-appearance: none;
+	border-radius: 5px;
+	box-shadow: inset 0 0 5px #333;
+	background-color: #999;
+	height: 10px;
+	vertical-align: middle;
+}
+input[type='range']::-moz-range-track {
+	-moz-appearance: none;
+	border-radius: 5px;
+	box-shadow: inset 0 0 5px #333;
+	background-color: #999;
+	height: 10px;
+}
+input[type='range']::-webkit-slider-thumb {
+	-webkit-appearance: none !important;
+	border-radius: 20px;
+	background-color: #FFF;
+	box-shadow:inset 0 0 10px rgba(000,000,000,0.5);
+	border: 1px solid #999;
+	height: 20px;
+	width: 20px;
+}
+input[type='range']::-moz-range-thumb {
+	-moz-appearance: none;
+	border-radius: 20px;
+	background-color: #FFF;
+	box-shadow:inset 0 0 10px rgba(000,000,000,0.5);
+	border: 1px solid #999;
+	height: 20px;
+	width: 20px;
+}
